Update backend for SearchFixRoom - close #218
